--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="col-md-12 text-center">
         <p id="helloText">?</p>
         <a href="https://en.wikipedia.org/wiki/Special:Random" class="btn btn-primary" target="_blank">
-          Wiki Random
+          Wiki Random Article
         </a>
       </div>
     </div>
