--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
-<!DOCTYPE html>
-<!-- HTML5 Hello world by kirupa - http://www.kirupa.com/html5/getting_your_feet_wet_html5_pg1.htm -->
-<html lang="en-us">
-
+<!doctype html>
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <title>Wiki View</title>
@@ -10,20 +8,26 @@
 </head>
 <body>
   <div class="container">
-    <div class="row">
-      <div class="col-md-12 text-center">
-        <p id="helloText">?</p>
-        <a href="https://en.wikipedia.org/wiki/Special:Random" class="btn btn-primary" target="_blank">
-          Wiki Random Article
+    <div class="jumbotron">
+      <h1>Wikipedia</h1>
+      <p>Wikipedia is a free online encyclopedia, created and edited by
+          volunteers around the world and hosted by the Wikimedia Foundation.</p>
+      <p>
+        <a class="btn btn-primary btn-lg" 
+          href="https://en.wikipedia.org/wiki/Special:Random"
+          target="_blank">
+          Wiki Random Article ?
         </a>
-      </div>
+      </p>
     </div>
     <div class="row">
-      <div class="col-md-12 text-center">
-        <form id="myform" action="submit-form.php">
-          Search: <input type='text' name='query'>
-          <a href="javascript: submitform()">Submit</a>
-        </form>
+      <div class="col-md-12">
+        <div class="input-group">
+          <input type="text" class="form-control" placeholder="Search on Wiki">
+          <span class="input-group-btn">
+            <button id="button" class="btn btn-primary" type="button">Search</button>
+          </span>
+        </div>
       </div>
     </div>
   </div>
