Realized project on jQuery

--- a/index.html
+++ b/index.html
@@ -3,33 +3,25 @@
 <head>
   <meta charset="utf-8">
   <title>Wiki View</title>
+  <link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="bootstrap.min.css" type="text/css" />
+  <link rel="stylesheet" href="style.css" type="text/css" />  
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
   <script type="text/javascript" src="app.js"></script>
 </head>
 <body>
   <div class="container">
-    <div class="jumbotron">
-      <h1>Wikipedia</h1>
-      <p>Wikipedia is a free online encyclopedia, created and edited by
-          volunteers around the world and hosted by the Wikimedia Foundation.</p>
-      <p>
-        <a class="btn btn-primary btn-lg" 
-          href="https://en.wikipedia.org/wiki/Special:Random"
-          target="_blank">
-          Wiki Random Article ?
-        </a>
-      </p>
-    </div>
-    <div class="row">
-      <div class="col-md-12">
-        <div class="input-group">
-          <input type="text" class="form-control" placeholder="Search on Wiki">
-          <span class="input-group-btn">
-            <button id="button" class="btn btn-primary" type="button">Search</button>
-          </span>
-        </div>
+    <div class= "text-center">
+      <div class = 'heading'>
+        <h1>Wikipedia API Search</h1>
+        <h3>Free Code Camp Front End Developement</h3>
+          <a href ="https://en.wikipedia.org/wiki/Special:Random" target="blank">
+        <img src ='https://lh5.ggpht.com/1Erjb8gyF0RCc9uhnlfUdbU603IgMm-G-Y3aJuFcfQpno0N4HQIVkTZERCTo65Iz2II=w300'></a>
       </div>
     </div>
+    <input class="form-control" id="searchTerm">
+    <button id='search' type="button" class ="btn btn-primary">Submit</button>
+    <div id ="output"></div>
   </div>
 </body>
 </html>
