--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <meta charset="utf-8">
   <title>Wiki View</title>
   <link rel="stylesheet" href="bootstrap.min.css" type="text/css" />
-  
+  <link rel="stylesheet" href="style.css" type="text/css" />
 </head>
 <body>
   <div class="container">
-    <div class="jumbotron">
+    <div class="jumbotron gray-light">
       <h1>Wikipedia</h1>
       <p>Wikipedia is a free online encyclopedia, created and edited by
           volunteers around the world and hosted by the Wikimedia Foundation.</p>
@@ -31,6 +31,15 @@
           </div>
       </div>
     </div>
+    <div class="row">
+      <div class="col-md-11">
+        <div>
+          <br>
+          <br>
+          <ul></ul>
+        </div>
+      </div>
+    </div>  
   </div>
   
   <script type="text/javascript" src="app.js"></script>
