--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="bootstrap.min.css" type="text/css" />
   <link rel="stylesheet" href="style.css" type="text/css" />
 </head>
-<body>
+<body onload="setFocus()">
   <div class="container">
     <div class="jumbotron gray-light">
       <h1>Wikipedia</h1>
